<resources>
    <string name="app_name" translatable="false">DrugDose</string>
    <string name="accesso">Accesso</string>
    <string name="Registrati">Registrati</string>
    <string name="accesso_ospite">Accedi come ospite</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button_accedi">Accedi</string>
    <string name="log_in">Log in</string>
    <string name="usa_biometria">"Usa biometria"</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="slogan">Clinical dosing precision</string>
    <string name="mail_esempio">nome.cognome@ospedale.it</string>
    <string name="password_esempio" translatable="false">••••••••</string>
    <string name="helper_password"><![CDATA[Minimo 8 caratteri, una lettera maiuscola, una minuscola e un carattere speciale (@#$%^&+=!_-)]]></string>

<!--    errori-->
    <string name="error_email_empty">L\'email è obbligatoria</string>
    <string name="error_invalid_email">L\'email non è valida</string>
    <string name="error_password_empty">La password è obbligatoria</string>
    <string name="error_invalid_credentials">Credenziali non valide</string>
    <string name="error_nome">Nome obbligatorio</string>
    <string name="error_cognome">cognome obbligatorio</string>
    <string name="error_psw_not_strong">Password non sicura </string>
    <string name="error_data_nascita_obl">Data di nascita obbligatoria </string>
    <string name="error_altezza_obl">Altezza obbligatoria </string>
    <string name="error_peso_obl">Peso obbligatorio </string>


    <!--    Errori firebase-->
<!--    Registrazione-->
    <string name="error_firebase_mail_presente">Esiste già un account con questa email.</string>
    <string name="error_firebase_no_internet">Controlla la tua connessione a internet</string>
    <string name="error_generic_register">Errore durante la registrazione. Riprova</string>
    <string name="errore_uid_non_trovato">Errore: UID non trovato</string>
<!--    login-->
    <string name="error_firebase_credenziali_errate" >Credenziali errate</string>
    <string name="error_generic_login">Errore durante l\'accesso. Riprova</string>
<!--Password dimenticata-->
    <string name="error_email_non_nel_db">Nessun account associato a questa email.</string>
    <string name="error_generic_psw_dimenticata">Errore nell\'invio dell\'email di reset.</string>

    <!--    Biometrica-->
    <string name="sblocco_biometric_title">Sblocco DrugDose</string>
    <string name="sblocco_biometric_subtitle">Autenticazione richiesta per accedere ai dati medici</string>
    <string name="biometric_usa_psw">Usa password</string>
    <string name="email_di_reset_toast">Email di reset inviata a</string>
    <string name="nuovo_paziente">Nuovo Paziente</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="data_nascita">Data di Nascita</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="altezza_cm">Altezza (cm)</string>
    <string name="salva_paziente">Salva Paziente</string>
    <string name="es_peso">Es. 75.5 kg</string>
    <string name="es_altezza">Es. 180 cm</string>
    <string name="es_data_nascita">Seleziona data</string>
    <string name="es_nome">Es. Mario</string>
    <string name="es_cognome">Es. Rossi</string>
    <string name="es_nome_cognome">Mario Rossi</string>
    <string name="error_peso_non_valido">Il peso inserito non è valido</string>
    <string name="altezza_non_valida">Altezza non valida</string>
    <string name="date_picker_title">Seleziona data di nascita</string>
    <string name="calendario_nascita">CALENDARIO_NASCITA</string>
    <string name="error_data_futura">La data non può essere nel futuro</string>
    <string name="error_eta_magg_130"><![CDATA[Data non valida (età > 130 anni)]]></string>
    <string name="paziente_salvato">Paziente Salvato con successo!</string>
    <string name="error_formato_data_non_valido">Formato data non valido</string>
    <string name="errore_salvataggio_paziente">Errore di rete durante il salvataggio</string>
    <string name="Biometric_helper">Dispositivo non configurato. Clicca per aggiungerlo.</string>
    <string name="errore_sconosciuto_caricamento">Errore sconosciuto durante il caricamento</string>
    <string name="errore_medico_non_autenticato">Errore: medico non autenticato</string>
    <string name="error_dati_non_validi_eliminazione">Dati non validi per l\'eliminazione</string>
    <string name="cerca_paziente">Cerca paziente...</string>
    <string name="Miei_pazienti">I Miei Pazienti</string>
    <string name="btn_nuovo_paziente">+ Nuovo</string>
    <string name="calcolatore">Calcolatore</string>
    <string name="seleziona_paziente">SELEZIONA PAZIENTE</string>
    <string name="richiesta_seleziona_paziente">Seleziona un paziente</string>
    <string name="seleziona_farmaco">SELEZIONA FARMACO</string>
    <string name="richiesta_seleziona_farmaco">Seleziona un farmaco</string>
    <string name="scegli_schema">SCEGLI SCHEMA</string>
    <string name="richiesta_seleziona_schema">Seleziona schema</string>
    <string name="calcola_dose">Calcola dose</string>
    <string name="error_paziente_non_valido">Seleziona un paziente valido</string>
    <string name="error_farmaco_obbligatorio">Seleziona un farmaco</string>
    <string name="error_schema_obbligatorio">Seleziona uno schema valido</string>
    <string name="error_altezza_paziente_non_valida">Calcolo non consentito: altezza del paziente non valida.</string>
    <string name="error_data_nascita_paziente_non_valida">Calcolo non consentito: data di nascita del paziente non valida.</string>
    <string name="error_farmaco_eta_minima">Calcolo non consentito: farmaco non indicato sotto i %1$s anni.</string>
    <string name="error_schema_calcolo_non_valido">Calcolo non consentito: seleziona uno schema valido.</string>
    <string name="error_eta_schema_non_compatibile">Calcolo non consentito: età del paziente non compatibile con lo schema selezionato.</string>
    <string name="error_peso_schema_non_compatibile">Calcolo non consentito: peso del paziente non compatibile con lo schema selezionato.</string>
    <string name="alert_farmaco_non_disponibile">Nessun alert disponibile per il farmaco selezionato.</string>
    <string name="dose_calcolata">DOSE CALCOLATA</string>
    <string name="frequenza">FREQUENZA</string>
    <string name="database_farmaci">Database Farmaci</string>
    <string name="cerca_farmaco">Cerca un farmaco...</string>
    <string name="indicazione_clinica">INDICAZIONE CLINICA</string>
    <string name="fonti_cliniche">FONTI CLINICHE</string>
    <string name="rcp_aifa">RCP AIFA...</string>
    <string name="nuovo_utente_txt">Nuovo utente?</string>
    <string name="registrati">Registrati</string>
    <string name="utente_gia_registrato">Utente già registrato</string>
    <string name="menu_farmaci">Farmaci</string>
    <string name="menu_pazienti">Pazienti</string>
    <string name="menu_home">Home</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="modalit_scura">Modalità Scura</string>
    <string name="lingua">Lingua</string>
    <string name="italiano">Italiano</string>
    <string name="log_out">LOG OUT</string>
    <string name="avviso_calcolatore_titolo">AVVISI CLINICI / CONTROINDICAZIONI</string>
    <string name="avviso_calcolatore_sottotitolo">Attendere selezione farmaco e paziente per visualizzare gli alert.</string>
    <string name="item_eta">Età: %1$s anni</string>
    <string name="item_peso">Peso: %1$s kg</string>
    <string name="item_data">Data: %1$s</string>
    <string name="item_altezza">Altezza: %1$s cm</string>
    <string name="posologia_formula">POSOLOGIA E FORMULA</string>
    <string name="limitazioni_avvertenze">LIMITAZIONI E AVVERTENZE</string>
    <string name="unita_misura_bs">Unità: %1$s</string>
    <string name="dosaggio_standard_bs">Dose: %1$s</string>
    <string name="item_farmaco_formula">Formula: %1$s - %2$s</string>
    <string name="bs_farmaco_formula">Formula: %1$s</string>
    <string name="bs_unita_misura_dettaglio">Unità di misura: %1$s</string>
    <string name="bs_limitazioni_testo">Età minima: %1$s anni\nDurata max: %2$s</string>
    <string name="bs_dosaggio_standard_dettaglio">Dose: %1$s\nFrequenza: %2$s</string>
    <string name="regole_dosaggio_titolo">Regole di dosaggio</string>
    <string name="dose_fissa_mg">%1$s mg</string>
    <string name="dialog_ospite_titolo">Funzione Premium</string>
    <string name="dialog_ospite_messaggio">La creazione e il salvataggio dei pazienti richiedono un account. Registrati per sbloccare questa funzione e creare il tuo database medico.</string>
    <string name="dialog_ospite_annulla">Annulla</string>
    <string name="dialog_ospite_registrati">Registrati</string>
    <string name="ospite_titolo_pazienti">Sezione Pazienti Bloccata</string>
    <string name="ospite_descrizione_pazienti">Per garantire la privacy e la sicurezza dei dati medici, il salvataggio dei pazienti è riservato agli utenti registrati.\n\nCrea il tuo account gratuito in pochi secondi per sbloccare questa funzionalità.</string>
    <string name="btn_registrati_ora">Registrati Ora</string>
    <string name="btn_hai_gia_account_accedi">Hai già un account? Accedi</string>
    <string name="cronologia">Cronologia</string>
    <string name="cronologia_calcoli">Cronologia calcoli</string>
    <string name="cronologia_calcoli_sottotitolo">Ultime dosi calcolate</string>
    <string name="nessun_calcolo_salvato">Nessun calcolo salvato.</string>
    <string name="storico_schema">Schema: %1$s</string>
    <string name="storico_dose">Dose: %1$s</string>
    <string name="storico_frequenza">Frequenza: %1$s</string>
</resources>
