<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:fillViewport="true">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.DrugDose.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <View
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="#E0E0E0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/nuovo_paziente"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/nome"
                        android:textColor="@color/primary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutNomePaziente"
                        style="@style/Widget.DrugDose.TextInputLayout.base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textNomePaziente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/es_nome"
                            android:inputType="textPersonName"
                            android:textColor="@color/grey"
                            android:maxLines="1"
                            android:imeOptions="actionNext"
                            android:nextFocusForward="@id/textCognomePaziente"
                            android:nextFocusRight="@id/textCognomePaziente"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/cognome"
                        android:textColor="@color/primary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutCognomePaziente"
                        style="@style/Widget.DrugDose.TextInputLayout.base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textCognomePaziente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/es_cognome"
                            android:inputType="textPersonName"
                            android:textColor="@color/grey"
                            android:maxLines="1"
                            android:imeOptions="actionNext"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/data_nascita"
                android:textColor="@color/primary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDataNascita"
                style="@style/Widget.DrugDose.TextInputLayout.base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/icon_person">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textDataNascita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/es_data_nascita"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/textPeso"
                    android:nextFocusDown="@id/textPeso"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/peso_kg"
                        android:textColor="@color/primary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutPeso"
                        style="@style/Widget.DrugDose.TextInputLayout.base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textPeso"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/es_peso"
                            android:inputType="numberDecimal"
                            android:textColor="@color/grey"
                            android:maxLines="1"
                            android:imeOptions="actionNext"
                            android:nextFocusForward="@id/textAltezza"
                            android:nextFocusRight="@id/textAltezza"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/altezza_cm"
                        android:textColor="@color/primary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutAltezza"
                        style="@style/Widget.DrugDose.TextInputLayout.base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textAltezza"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/es_altezza"
                            android:inputType="number"
                            android:textColor="@color/grey"
                            android:maxLines="1"
                            android:imeOptions="actionDone"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSalvaPaziente"
                style="@style/Widget.DrugDose.button.BottonePrimario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingVertical="12dp"
                android:text="@string/salva_paziente" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.core.widget.NestedScrollView>